# mesh-svg-tool

./: .gitignore  CMakeLists.txt  README.md  bvh_openmesh.hpp  clip_openmesh.hpp  main.cpp  mesh.hpp  vcpkg.json
tools/: build.sh  configure.sh
